<resources>
    <string name="app_name">Card Reader</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="business_card_information">Business Card Information</string>
    <string name="take_picture">Take picture</string>
    <string name="button_to_open_camera">Button to open camera</string>
    <string name="business_card_reader">Business Card Reader</string>
    <string name="text_goes_here">Text goes here..</string>
    <string name="contacts">Contacts</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="phone">Phone</string>
</resources>
