<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.gpads.gautham.imagetotextanalysis.Activities.ContactsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="54dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="103dp"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="55dp"
        android:layout_height="28dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/phone"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="377dp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="91dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        tools:layout_editor_absoluteY="224dp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="275dp"
        android:layout_height="53dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="monospace"
        android:text="Add Contact"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.592"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="478dp" />

</android.support.constraint.ConstraintLayout>
